--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -2,20 +2,22 @@
     margin-left: 50px;
     font-family: 'Saira Condensed', sans-serif;
 }
-.main code {
-    font-size: larger;
-}
-
 
 
 .main  ul{
     padding-left:  30px;
     padding-top: 15px;
     padding-bottom: 15px;
-    width: 500px;
+    width: 360px;
     margin-left: 20px;
     margin-top: 30px;
     margin-bottom: 30px;
     border-style: groove;
     box-shadow: rgb(0, 0, 0) 10px 10px  ;
+}
+
+@media screen and (max-width: 600px) {
+    .main  ul {
+      width: 80%;
+    }
 }
